--- a/backend/EkoFunkcje/EkoFunkcje/EkoFunkcje.csproj
+++ b/backend/EkoFunkcje/EkoFunkcje/EkoFunkcje.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AzureFunctions.Extensions.Swashbuckle" Version="1.4.0" />
